<resources>
    <string name="app_name">AndroidTest</string>

    <!-- Home Screen Strings -->
    <string name="activity_main_title">Coding Tasks</string>
    <string name="chat_button">CHAT</string>
    <string name="login_button">LOGIN</string>
    <string name="animation_button">ANIMATION</string>

    <!-- Login Screen Strings -->
    <string name="activity_login_title">Login</string>
    <string name="activity_login_username_edit_text">Username</string>
    <string name="activity_login_password_edit_text">Password</string>

    <!-- Chat Screen Strings -->
    <string name="activity_chat_title">Chat</string>

    <!-- Animation Screen Strings   -->
    <string name="activity_animation_title">Animation</string>
    <string name="activity_animation_button">FADE IN</string>
</resources>
