<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/gpc_sunset" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/transparent_background"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_activity_edit_text_margin_left"
            android:layout_marginRight="@dimen/login_activity_edit_text_margin_right"
            android:layout_marginTop="@dimen/login_activity_edit_text_margin_top"
            android:layout_marginBottom="@dimen/login_activity_edit_text_margin_bottom"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/activity_login_username_edit_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_activity_edit_text_margin_left"
            android:layout_marginRight="@dimen/login_activity_edit_text_margin_right"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/activity_login_password_edit_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_activity_button_margin_left"
            android:layout_marginRight="@dimen/login_activity_button_margin_right"
            android:layout_marginTop="@dimen/login_activity_button_margin_top"
            android:layout_marginBottom="@dimen/login_activity_button_margin_bottom"
            android:height="@dimen/login_activity_button_height"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login_button"
            android:textColor="@color/background" />

    </LinearLayout>


</RelativeLayout>